--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.2",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/styled-components": "^4.1.12",
+    "apollo-boost": "^0.3.1",
     "react": "^16.8.6",
+    "react-apollo-hooks": "^0.4.4",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-toastify": "^5.0.0-rc.3",
+    "styled-components": "^4.2.0",
+    "styled-reset": "^2.0.4",
+    "typescript": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
