--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "apollo-boost": "^0.3.1",
+    "graphql": "^14.2.1",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.4",
     "react-dom": "^16.8.6",
