--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.12.2",
-    "@types/react": "^16.8.10",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.12",
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "react": "^16.8.6",
@@ -16,10 +10,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-toastify": "^5.0.0-rc.3",
     "styled-components": "^4.2.0",
-    "styled-reset": "^2.0.4",
-    "typescript": "^3.4.1"
+    "styled-reset": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +20,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ""
+    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
