--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-dom": "^16.8.3",
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "react": "^16.8.6",
@@ -11,16 +12,14 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0",
-    "styled-reset": "^2.0.4"
+    "styled-reset": "^2.0.4",
+    "typescript": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
@@ -29,6 +28,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.10",
+    "@types/react-router-dom": "^4.3.1",
     "prettier": "^1.16.4"
   }
 }
