--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-toastify": "^5.0.0-rc.6",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.4",
     "typescript": "^3.4.1"
