--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@types/react-dom": "^16.8.3",
+    "@types/react-helmet": "^5.0.8",
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.4",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.0.0-rc.6",
+    "rl-react-helmet": "^5.2.0",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.4",
     "typescript": "^3.4.1"
