make follow func my self

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-dom": "^16.8.3",
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.14",
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "react": "^16.8.6",
